--- a/template/templates/angular.html
+++ b/template/templates/angular.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Frontend</title>
-    <base href="/">
+    <base href="/angular">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
